src/App.css
.App {
    height: 100%;
    margin: 0;
    padding: 0;
    text-align: left;
}

.AppSplit {
    width: 100%;
    height: calc(100% - 70px);
}

.TaskFeed {
    width: calc(100% - 440px);
    text-align: left;
    float: right;
    padding-top: 20px;
    padding-right: 20px;
}

.TaskFeed h1 {
    text-align: center;
}

/* Button design taken from https://fdossena.com/?p=html5cool/buttons/i.frag */
button {
    display: inline-block;
    padding: 0.35em 1.2em;
    border: 0.1em solid #8B575C;
    margin: 0 0.3em 0.3em 0;
    border-radius: 0.12em;
    box-sizing: border-box;
    text-decoration: none;
    font-weight: 300;
    color: #8B575C;
    text-align: center;
    transition: all 0.2s;
}

button:hover {
    color: #F4F4F4;
    background-color: #8B575C;
}

@media all and (max-width: 30em) {
    button {
        display: block;
        margin: 0.4em auto;
    }
}

/* Checkbox style modified from https://codepen.io/valerypatorius/pen/oXGMGL */
input[type="checkbox"] {
    display: none;
}

input[type="checkbox"] + label {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 20px;
    color: black;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

input[type="checkbox"] + label:last-child {
    margin-bottom: 0;
}

input[type="checkbox"] + label:before {
    content: '';
    display: block;
    width: 20px;
    height: 20px;
    border: 1px solid #8B575C;
    position: absolute;
    background-color: #F4F4F4;
    top: 0;
    left: 0;
    opacity: 0.6;
    -webkit-transition: all .12s, border-color .08s;
    transition: all .12s, border-color .08s;
}

input[type="checkbox"]:checked + label:before {
    width: 10px;
    top: -5px;
    left: 5px;
    border-radius: 0;
    opacity: 1;
    background-color: transparent;
    border-top-color: transparent;
    border-left-color: transparent;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

